# IcEng

./: .gitignore  .gitmodules  LICENSE  README.md
IcData/IcDemo/MixShapes/: MixShapes.blend  MixShapes.blend1  woodTex.xcf
IcData/IcDemo/monkey/: monkey.mtl
IcData/IcDemo/plane/: plane.blend  plane.mtl
IcData/IcShader/: IcShaderFrag.vsh  IcShaderVert.vsh
IcShader/: IcShaderFrag.vsh  IcShaderVert.vsh
demo/data/IcDemo/: list.txt  model_list.txt
demo/data/IcDemo/MixShapes/: MixShapes.blend  MixShapes.mtl
demo/data/IcDemo/axis_cube/: axis_cube.blend  axis_cube.mtl  axis_cube3.blend  axis_cube3.mtl
demo/data/IcDemo/cubeStd/: Untitled.xcf  cubeStd.blend  cubeStd.mtl  cubeStd.xcf
demo/src/: DemoAnimation.cpp  DemoAnimation.hpp  DemoApp.cpp  DemoApp.hpp  DemoBasic.cpp  DemoBasic.hpp  DemoLights.cpp  DemoLights.hpp  DemoModelCreate.cpp  DemoModelCreate.hpp  DemoModels.cpp  DemoModels.h  DemoNestedTrans.cpp  DemoNestedTrans.hpp  DemoScene.cpp  DemoScene.h  DemoTransform.cpp  DemoTransform.hpp  DemoWindow.cpp  DemoWindow.hpp  build.gradle
demo/src/iOS/: DemoViewController.h  DemoViewController.mm  IcDemoTableVCon.h  IcDemoTableVCon.mm  IcDemoViewCon.h  IcDemoViewCon.mm  IcDemoViewCon.xib
demo/src/pc/: main.cpp
doc/: Build_IcEng_HowTo.md  IcEng_Manual.doc  License.txt
inc/: Ic3d.h  IcEngJNI.h  IcMath.h  IcRenderAdp.h  IcVR.h  IcViewController.h  ctl.h
inc/core/: IcEngJNI.h  IcRenderAdpStd.h  IcRenderEng.h  IcSceneVr.h  IcTestWindow.h  IcViewController.h  OpenGLinc.h
proj/android/IcEng/: settings.gradle
proj/android/IcEng/IcEngLib/: build.gradle  proguard-rules.pro
proj/android/IcEng/IcEngNative/: CMakeLists.txt  build.gradle
proj/android/IcEng/IcEngNative/src/androidTest/java/com/simviu/IcEngNative/: ExampleInstrumentedTest.java
proj/android/IcEng/IcEngNative/src/main/: AndroidManifest.xml
proj/android/IcEng/IcEngNative/src/main/res/values/: strings.xml
proj/android/IcEng/IcEngNative/src/test/java/com/simviu/IcEngNative/: ExampleUnitTest.java
proj/android/IcEng/app/: CMakeLists.txt  build.gradle
proj/android/IcEng/app/src/androidTest/java/com/simviu/IcEngTest/: ExampleInstrumentedTest.java
proj/android/IcEng/app/src/main/: AndroidManifest.xml
proj/android/IcEng/app/src/main/cpp/: IcAppJNI.cpp  native-lib.cpp
proj/android/IcEng/app/src/main/java/com/simviu/IcEngTest/: IcTestActivity.java  MainActivity.java  MyTestActivity.java
proj/android/IcEng/app/src/main/res/layout/: activity_main.xml  activity_my_test.xml
proj/android/IcEng/app/src/main/res/values/: strings.xml
proj/android/IcEng/app/src/test/java/com/simviu/IcEngTest/: ExampleUnitTest.java
proj/android/IcEng/exportlib/: build.gradle
proj/android/IcEngDemo/: build.gradle
proj/android/IcEngDemo/app/: CMakeLists.txt  build.gradle
proj/android/IcEngDemo/app/src/androidTest/java/com/simviu/IcEngDemo/: ExampleInstrumentedTest.java
proj/android/IcEngDemo/app/src/main/: AndroidManifest.xml
proj/android/IcEngDemo/app/src/main/cpp/: IcAppJNI.cpp  native-lib.cpp
proj/android/IcEngDemo/app/src/main/java/com/simviu/IcEngDemo/: DemoActivity.java  DemoListActivity.java
proj/android/IcEngDemo/app/src/main/res/layout/: activity_demo.xml
proj/android/IcEngDemo/app/src/main/res/values/: strings.xml
proj/android/IcEngDemo/app/src/test/java/com/simviu/IcEngDemo/: ExampleUnitTest.java
proj/android/IcVRDemo/app/: CMakeLists.txt  build.gradle
proj/android/IcVRDemo/app/src/androidTest/java/com/simviu/IcVRDemo/: ExampleInstrumentedTest.java
proj/android/IcVRDemo/app/src/main/: AndroidManifest.xml
proj/android/IcVRDemo/app/src/main/cpp/: IcAppJNI.cpp
proj/android/IcVRDemo/app/src/main/java/com/simviu/IcVRDemo/: MainActivity.java  VRDemoActivity.java
proj/android/IcVRDemo/app/src/main/res/layout/: activity_main.xml  activity_vrdemo.xml
proj/android/IcVRDemo/app/src/main/res/values/: strings.xml
proj/android/IcVRDemo/app/src/test/java/com/simviu/IcVRDemo/: ExampleUnitTest.java
proj/ios/IcEngDemo/IcEngDemo.xcodeproj/: project.pbxproj
proj/ios/IcEngDemo/IcEngDemoIOS/: AppDelegate.h  AppDelegate.m  IcDemoTableVCon.h  IcDemoTableVCon.mm  IcDemoTableVCon.xib  main.m  (+3 more)
proj/ios/IcEngLib/: build_ios_lib.sh
proj/linux/: README.md
proj/linux/IcEngDemo/: CMakeLists.txt
proj/linux/IcEngLib/: CMakeLists.txt
proj/linux/IcVRDemo/: CMakeLists.txt
proj/mac/IcEngLib/: build_ios_lib.sh
proj/qt/DevEng/: DevEng.pro
proj/windows/IcEngDemo/: IcEngDemo.sln  IcEngDemo.vcxproj  ReadMe.txt
proj/windows/IcEngLib/: IcEngLib.sln  IcEngLib.vcxproj  IcEngTest.vcxproj  ReadMe.txt
proj/windows/IcVRDemo/: IcVRDemo.sln  IcVRDemo.vcxproj  stdafx.cpp
src/Ic3d/: Ic3d.cpp  IcCamera.cpp  IcLight.cpp  IcMaterial.cpp  IcMesh.cpp  IcMeshDataCreate.cpp  IcMeshDataObj.cpp  IcMeshDataSubMsh.cpp  IcModel.cpp  IcModelLoaderObj.cpp  IcObject.cpp  IcScene.cpp  IcText.cpp  IcTexture.cpp  IcUtil.cpp
src/IcApp/: IcApp.cpp  IcWinMng.cpp  IcWindow.cpp
src/IcApp/android/: IcEngJNI.cpp
src/IcApp/iOS/: IcViewController.mm
src/IcApp/pc/: IcAppPC.cpp  IcWinMngPC.cpp
src/IcRenderEng/: IcRenderAdp.cpp  IcRenderAdpStd.cpp  IcRenderAdpStd_Mesh.cpp  IcRenderAdpStd_Tex.cpp  IcRenderAdpStd_TexPVR.cpp  IcRenderEng.cpp  IcRenderEngText.cpp  IcShader.cpp
src/IcVR/: IcSceneVR.cpp  IcSceneVr.cpp  IcWindowVR.cpp  IcWindowVr.cpp
src/IcWindow/: IcWinMng.cpp  IcWindow.cpp
src/IcWindow/android/: IcEngJNI.cpp  IcWinMngAndroid.cpp
src/IcWindow/iOS/: IcViewController.mm  IcViewController.xib  IcWinMngIOS.cpp
src/IcWindow/pc/: IcWinMngGlut.cpp  IcWinMngPC.cpp  IcWindowPC.cpp
src/ctl/: ctlBinBuf.cpp  ctlImg.cpp  ctlLog.cpp  ctlStr.cpp  ctlTest.cpp  ctlTest_img.cpp  ctlUtil.cpp
src/demo/: DemoApp.cpp  DemoLights.cpp  DemoRenderToTex.cpp  DemoScene.cpp  DemoScene.h
src/demo/IcEngDemo/: DemoApp.cpp  DemoApp.hpp  DemoBasic.cpp  DemoFog.cpp  DemoLights.cpp  DemoModelCreate.cpp  DemoNestedTrans.cpp  DemoRenderToTex.cpp  DemoScene.cpp  DemoScene.h  DemoTexture.cpp
src/demo/VRDemo/: VRDemoApp.cpp  VRDemoApp.hpp  main.cpp
src/demo/pc/: main.cpp
src/test/: IcTestWindow.cpp  MyTestApp.cpp  MyTestApp.h  main.cpp
(+63 files in other folders)
